[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Physics/Godot physics.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/earth.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/mercury.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Physics/Trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=1]
radius = 56.0803

[sub_resource type="CircleShape2D" id=2]
radius = 48.0104

[sub_resource type="CircleShape2D" id=3]

[node name="Godot physics" type="Node2D"]
position = Vector2( -2, 3 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 7, 7 )

[node name="Add" type="Button" parent="Camera2D"]
margin_left = 808.0
margin_top = -592.0
margin_right = 1024.0
margin_bottom = -504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/Add"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "+"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtract" type="Button" parent="Camera2D"]
margin_left = 584.0
margin_top = -596.0
margin_right = 800.0
margin_bottom = -508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/Subtract"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = -8.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "-"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earth" type="RigidBody2D" parent="."]
position = Vector2( 500, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="Earth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth"]
shape = SubResource( 1 )

[node name="earth" type="Sprite" parent="Earth/CollisionShape2D"]
position = Vector2( -1.00003, 22.5001 )
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="Sun" type="RigidBody2D" parent="."]
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="Sun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sun"]
shape = SubResource( 2 )

[node name="sun" type="Sprite" parent="Sun/CollisionShape2D"]
position = Vector2( 3.50006, 27.5 )
scale = Vector2( 0.454, 0.434 )
texture = ExtResource( 3 )

[node name="mars" type="RigidBody2D" parent="."]
position = Vector2( 800, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="mars2" type="RigidBody2D" parent="."]
position = Vector2( 1100, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars2/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="mars3" type="RigidBody2D" parent="."]
position = Vector2( 1400, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars3"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars3/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="mars4" type="RigidBody2D" parent="."]
position = Vector2( 1700, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars4"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars4/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="mars5" type="RigidBody2D" parent="."]
position = Vector2( 2000, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars5"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars5/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="mars6" type="RigidBody2D" parent="."]
position = Vector2( 2300, 0 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="mars6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mars6"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="mars6/CollisionShape2D"]
scale = Vector2( 0.42, 0.386 )
texture = ExtResource( 2 )

[node name="Line2D earth" type="Line2D" parent="."]
visible = false
position = Vector2( 500, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D mars2" type="Line2D" parent="."]
visible = false
position = Vector2( 500, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D mars" type="Line2D" parent="."]
visible = false
position = Vector2( 500, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Trail" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars4")

[node name="Trail2" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars5")

[node name="Trail7" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars6")

[node name="Trail6" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars3")

[node name="Trail3" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../Earth")

[node name="Trail4" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars")

[node name="Trail5" parent="." instance=ExtResource( 4 )]
width = 20.0
joint_mode = 2
targetPath = NodePath("../mars2")

[connection signal="pressed" from="Camera2D/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Camera2D/Subtract" to="." method="_on_Subtract_pressed"]
